tests/baselines/reference/indexTypeCheck.errors.txt
==== tests/cases/compiler/indexTypeCheck.ts (8 errors) ====
    interface Red {
        [n:number]; // ok
     ~~~~~~~~~~
!!! indexTypeCheck.ts(2,2): error TS1021: Index signature must have a type annotation.
        [s:string]; // ok
     ~~~~~~~~~~
!!! indexTypeCheck.ts(3,2): error TS1021: Index signature must have a type annotation.
    }
    
    interface Blue {
        [n:number]: any; // ok
        [s:string]: any; // ok
    }
    
    interface Yellow {
        [n:number]: Red; // ok
        [s:string]: Red; // ok
    }
    
    interface Orange {
        [n:number]: number; // ok
     ~~~~~~~~~~~~~~~~~~
!!! indexTypeCheck.ts(17,2): error TS2167: Numeric indexer type 'number' must be assignable to string indexer type 'string'.
        [s:string]: string; // error
    }
    
    interface Green {
        [n:number]: Orange; // error
     ~~~~~~~~~~~~~~~~~~
!!! indexTypeCheck.ts(22,2): error TS2168: Numeric indexer type 'Orange' must be assignable to string indexer type 'Yellow':
!!! 	Index signatures of types 'Orange' and 'Yellow' are incompatible:
!!! 		Index signatures of types 'String' and 'Red' are incompatible.
        [s:string]: Yellow; // ok
    }
    
    interface Cyan {
        [n:number]: number; // error
     ~~~~~~~~~~~~~~~~~~
!!! indexTypeCheck.ts(27,2): error TS2167: Numeric indexer type 'number' must be assignable to string indexer type 'string'.
        [s:string]: string; // ok
    }
    
    interface Purple {
        [n:number, s:string]; // error
     ~
!!! indexTypeCheck.ts(32,2): error TS1095: Index signature must have exactly one parameter.
    }
    
    interface Magenta {
        [p:Purple]; // error
      ~~~~~~~~
!!! indexTypeCheck.ts(36,3): error TS1023: Index signature parameter type must be 'string' or 'number'.
    }
    
    var yellow: Yellow;
    var blue: Blue;
    var s = "some string";
    
    yellow[5]; // ok
    yellow["hue"]; // ok
    yellow[<any>{}]; // ok
    
    s[0]; // error
    s["s"]; // ok
    s[<any>{}]; // ok
    
    yellow[blue]; // error
    ~~~~~~~~~~~~
!!! indexTypeCheck.ts(51,1): error TS2008: Value of type 'Yellow' is not indexable by type 'Blue'.
    
    var x:number[];
    x[0];
    
    class Benchmark {
    
        public results: { [x:string]: any; } = <{ [x:string]: any; }>{};
    
        public addTimingFor(name: string, timing: number) {
            this.results[name] = this.results[name];
        }
    }